@@ -115,7 +115,7 @@
 
           <p>Since the original release, dozens of people have contributed time and effort to NUnitAsp.  Of particular note is Levi Khatskevitch, who joined the team in November 2003 and coordinated the integration of patches and contributed many new features and improvements to version 1.4 and 1.5.  For a complete list of contributors, see our <a href="changes.txt">change log</a>.
 
-          <p>NUnitAsp is downloaded hundreds of time every month and is mentioned on web sites around the world.  It needs your support to continue to grow and improve!  If there's a tester or other feature you can contribute, code it up and send it to us.  For more information, see the <a href="contribute.html">Contributions</a> page.</p>
+          <p>NUnitAsp is downloaded thousands of time every month and is mentioned on web sites around the world.  It needs your support to continue to grow and improve!  If there's a tester or other feature you can contribute, code it up and send it to us.  For more information, see the <a href="contribute.html">Contributions</a> page.</p>
 
           <p class="end">Last updated for CVS.</p>
 
