@@ -257,6 +257,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "HtmlTester\HtmlInputButtonTest.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "HtmlTester\HtmlInputCheckBoxTest.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
